src/App.css
/* Google Fonts */
@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=DM+Sans:wght@100..1000&display=swap");
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Outfit:wght@100..900&display=swap%27");
@import "tailwindcss";

@theme {
  --font-title: "Outfit", sans-serif;
  --font-desc: "DM Sans", sans-serif;
  --header-menu-txt-color-first: #0C0C0C;
  --accent-color: #ED6C30;
  --accent-color-hover: #D5591F;
  --global-txt-color: #0C0C0C;
  --button-txt-color: #ffffff;
  --button-txt-color-hover: #ffffff;
  --button-bg-color: #ED6C30;
  --button-bg-color-hover: #D5591F;
  --header-menu-txt-color-second: #ffffff;
  --header-menu-txt-color-inner: #ffffff;
  --header-menu-sticky-bg-color-first: #ffffff;
  --header-menu-sticky-bg-color-second: #000000;
  --header-menu-sticky-bg-color-inner: #000000;
  --header-cta-txt-color: #ffffff;
  --header-cta-txt-color-hover: #ffffff;
  --header-cta-bg-color: #ED6C30;
  --header-cta-bg-color-hover: #D5591F;
  --header-title-txt-color: #ffffff;
  --header-bg-overlay-color: #000000;
  --logo-height: 40px;
  --footer-txt-color: #0C0C0C;
  --footer-bg-color: #e4e5e9;


  --blue:#002F46;
  --e-global-color-primary:#DE7731;
  --e-global-color-text:#3D3D3D;
  --e-global-color-secondary:#002F46;
  --orange: #DE7731;
  --header-overlay-opacity: 0.6;
  --header-padding-top: 180px;
  --header-padding-bottom: 140px;
  --header-menu-f-size: 16px;
  --header-menu-f-weight: 600;
  --header-menu-font: var(--global-headers-font);
  --header-menu-text-transform: none;
  --header-menu-letter-spacing: 0;
  --header-menu-position: right;
  --header-sitename-font: var(--header-menu-font);
  --header-menu-dropdown-paddings: 12px 8px;
  --header-menu-dropdown-border-radius: 8px;
  --header-menu-dropdown-item-txt-color: var(--global-txt-color);
  --header-menu-dropdown-item-txt-color-hover: var(--orange);
  --header-menu-dropdown-item-f-size: 15px;
  --header-menu-dropdown-item-f-weight: 600;
  --header-menu-dropdown-item-font: var(--global-headers-font);
  --header-menu-dropdown-item-text-transform: none;
  --header-menu-dropdown-item-letter-spacing: normal;
  --header-menu-dropdown-item-paddings: 14px 28px 14px 18px;
  --header-cta-f-size: 16px;
  --header-cta-f-weight: 600;
  --header-cta-font: var(--header-menu-font);
  --header-cta-border: 1px solid transparent;
  --header-cta-border-hover: 1px solid transparent;
  --header-cta-border-radius: 100px;
  --header-cta-paddings: 12px 22px;
  --header-title-f-size: 64px;
  --header-title-f-weight: 600;
  --header-title-font: var(--global-headers-font);
  --header-title-text-transform: none;
  --header-title-letter-spacing: -0.5px;
  --breadcrumbs-txt-color: var(--header-title-txt-color);
  --breadcrumbs-a-color: var(--orange);
  --breadcrumbs-a-color-hover: var(--header-title-txt-color);
  --breadcrumbs-f-size: 16px;
  --breadcrumbs-f-weight: 600;
  --breadcrumbs-font: var(--global-headers-font);
  --color-gray: oklch(27.8% 0.033 256.848);
}
/* Mobile Toggle */
#mobile-toggle {
  width: 42px;
  height: 42px;
  padding: 0;
  background: transparent;
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

.animated-icon1 {
  width: 26px;
  height: 12px;
  position: relative;
  margin: 0;
}

.animated-icon1 span {
  position: absolute;
  left: 0;
  width: 100%;
  height: 2px;
  display: block;
  background: var(--header-menu-txt-color-first);
  transition: all .18s linear;
}

/* first line */
.animated-icon1 span:nth-child(1) {
  top: 0;
}

/* second line */
.animated-icon1 span:nth-child(2) {
  top: 10px;
}

/* Menu Open */
.animated-icon1.open span:nth-child(1) {
  top: 3px;
}

.animated-icon1.open span:nth-child(2) {
  top: 9px;
}

@media (max-width:1199px) {
  #mobile-toggle {
    display: flex;
  }
}

html {
  scroll-behavior: smooth;
}

